Surf-skate reorganized to fix horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
 	font-family: "brandon-grotesque",sans-serif;
-	overflow-x: hidden;
+	/*overflow-x: hidden;*/
 }
 
 /* LEGAL HEADER */
@@ -876,10 +876,6 @@ a:hover {
 
 /* Blog Post Styles */
 
-.bg-img-container-wrap {
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-}
 .bg-img-container-wrap.blog {
 	overflow: hidden;
 	position: relative;
@@ -1144,8 +1140,8 @@ img.arrow.rotate-down {
 
 .parralax-credit {
 	position: absolute;
-	bottom: 1%;
-	right: 2%;
+	bottom: 10px;
+	right: 10px;
 }
 
 .parralax-credit p {
@@ -1410,9 +1406,73 @@ ul.scroll-list {
 	z-index: -1 !important;	
 }
 
-/* Article Surf Skate */
+/* Article Surf Skate NEW */
 
 #article-surf-skate {
+	padding-bottom: 0;
+	margin-bottom: -25px;
+}
+#article-surf-skate .col-md-8 {
+	text-align: center;
+	padding-bottom: 80px;
+}
+.surf-skate-wrap {
+	 width: 100%;
+	 background-attachment: fixed;
+	 background-repeat: no-repeat;
+	 background-position: center;
+	 position: relative;
+	 min-height: 100%;
+	 -webkit-background-size: cover;
+	 -moz-background-size: cover;
+	 -o-background-size: cover;
+	 /*box-shadow: inset 0 0 1em #111;*/
+	 box-shadow: inset 0 0 2em rgba(0,0,0,.3);
+}
+.surf-skate-wrap#surf-bg {
+	background-image: url("../images/surf-skate/surf_1.jpg");
+}
+.surf-skate-wrap#skate-bg {
+	background-image: url("../images/surf-skate/skate_1.jpg");
+}
+#article-surf-skate .box-header {
+	display: block;
+	padding: 25px;
+	margin-bottom: 25px;
+}
+#article-surf-skate .box-header .best-for {
+	font-size: 20px;
+	font-weight: 900;
+	text-transform: none;
+}
+#article-surf-skate .scroll-list-box {
+	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
+}
+#article-surf-skate .scroll-list-box p {
+	padding: 25px;
+}
+.mobile-surf,
+.mobile-skate {
+	display: none;
+}
+.mobile-surf p,
+.mobile-skate p {
+	position: absolute;
+	bottom: 5%;
+	left: 50%;
+	transform: translateX(-50%);
+	color: rgba(255,255,255,1);
+	text-shadow: 0px 2px 4px rgba(0,0,0,.4);
+	text-align: center;
+	padding: 0;
+	text-transform: uppercase;
+	font-size: 30px;
+	font-weight: 700;
+}
+
+/* Article Surf Skate */
+
+/*#article-surf-skate {
 	padding-bottom: 0;
 	margin-bottom: -25px;
 }
@@ -1455,6 +1515,10 @@ ul.scroll-list {
 #article-surf-skate .scroll-list-box p {
 	padding: 25px;
 }
+.row.surf-skate-wrap {
+	margin-right: 0;
+	margin-left: 0;
+}
 
 .surf-skate-title {
 	text-align: center;
@@ -1470,19 +1534,9 @@ ul.scroll-list {
 	text-transform: capitalize;
 	font-weight: 700;
 }
-
-.surf-skate-container {
-	background-attachment: fixed;
-  	background-repeat: no-repeat;
-  	position: relative;
-  	min-height: 100%;
-  	padding: 40px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    box-shadow: inset 0 0 1em #111;
+.surf-skate-container-fluid {
+	 width: 100%;
 }
-
 .surf-skate-wrap {
 	background-attachment: fixed;
     background-repeat: no-repeat;
@@ -1555,7 +1609,7 @@ ul.scroll-list {
 	text-transform: uppercase;
 	font-size: 30px;
 	font-weight: 700;
-}
+}*/
 
 
 /* Animation Styles */
@@ -2099,7 +2153,7 @@ ul.scroll-list {
 	.hideContentWrap .hideContent h4 {padding: 8px 30px 4px;font-size: 16px;display:block;}
 	.surf-skate-wrap#surf-bg {background-image: none; box-shadow: none}
 	.surf-skate-wrap#skate-bg {background-image: none; box-shadow: none}
-	.mobile-surf,.mobile-skate {visibility: visible}
+	.mobile-surf,.mobile-skate {display: block;}
 	.scroll-list-box {width: 90%; border:none; background-color: rgba(0,0,0,0); box-shadow: none; margin-left: 5%; margin-bottom: 0;  border-bottom: 4px solid rgba(5,187,255,1); padding: 5% 0;}
 	#article-roadtrip .scroll-list-box {border: 4px solid rgba(5,187,255,1); background-color: rgba(255,255,255,1); padding: 0;}
 	.scroll-list-box:first-of-type {margin-top: 0px}
